feat: added new input field component

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/geojson": "^7946.0.14",
     "@types/leaflet": "^1.9.8",
     "@types/leaflet-routing-machine": "^3.2.8",
+    "@vueuse/core": "^10.9.0",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "leaflet.animatedmarker": "^1.0.0",
