--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,7 @@ updates:
       interval: "monthly"
     assignees:
       - "ozgurakgun"
+    groups:
+      all-npm-packages:
+        patterns:
+          - "*"
