remove grouping from npm updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ updates:
       interval: "monthly"
     assignees:
       - "ozgurakgun"
-    groups:
-      all-npm-packages:
-        patterns:
-          - "*"
+    # groups:
+    #   all-npm-packages:
+    #     patterns:
+    #       - "*"
