--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "@types/geojson": "^7946.0.14",
     "@types/leaflet": "^1.9.12",
     "@types/leaflet-routing-machine": "^3.2.8",
+    "@types/lodash": "^4.17.7",
     "@vueuse/core": "^10.11.0",
+    "chart.js": "^4.4.3",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "leaflet.animatedmarker": "^1.0.0",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "primevue": "^3.49.1",
     "vue": "^3.4.31",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
