Enhancement/smooth out marker movements (#35)
* feat: (WIP) smoother animation

* feat: adjust icon size during zoom event && spread buses equally

* chore: improved typings

* feat: improved bus animation && (WIP) added charts for cost and emission

* feat: improved marker movement

* feat: switched to apexcharts and improved chart update performance

* feat: miles based calculations

* chore: updated package-lock.json

--- a/package.json
+++ b/package.json
@@ -16,10 +16,16 @@
     "@types/geojson": "^7946.0.14",
     "@types/leaflet": "^1.9.12",
     "@types/leaflet-routing-machine": "^3.2.8",
+    "@types/lodash": "^4.17.7",
     "@vueuse/core": "^10.11.0",
+    "apexcharts": "^3.50.0",
+    "chart.js": "^4.4.3",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "leaflet.animatedmarker": "^1.0.0",
+    "lodash": "^4.17.21",
+    "vue-chartjs": "^5.3.1",
+    "vue3-apexcharts": "^1.5.3",
     "pinia": "^2.2.0",
     "primevue": "^3.49.1",
     "vue": "^3.4.35",
